project/stage/tests/accept/empty_functions/no_params/void_func.ul
void f12345098_234fXx_ ( ) { }
