project/stage/tests/reject/bad_statements/bad_func_calls/missing_paren_in_if.ul
void m() {
    if ( func(1 ) {}
}
